--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -4,5 +4,13 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+::selection {
+  background: rgba(99, 102, 241, 0.35); /* soft purple */
+  color: #ffffff;
+}
 
-
+/* For fireFox  */
+::-moz-selection {
+  background: rgba(99, 102, 241, 0.35); /* soft purple */
+  color: #ffffff;
+}
